--- a/src/components/Map/MapView.scss
+++ b/src/components/Map/MapView.scss
@@ -5,13 +5,9 @@
   height: 500px;
   width: 500px;
 
-  .leaflet-map-pane {
-       z-index: 2 !important;
-    }
+  .leaflet-map-pane { z-index: 2 !important; }
 
-    .leaflet-google-layer {
-        z-index: 1 !important;
-    }
+    .leaflet-google-layer { z-index: 1 !important; }
 
   .leaflet-container {
     width: 100%;
@@ -23,9 +19,7 @@
     height: 450px;
     width: 450px;
 
-    #mapid {
-      margin-left: 0 !important;
-    }
+    #mapid { margin-left: 0 !important; }
   }
 
   @media only screen and (max-width: 975px) {
@@ -44,5 +38,4 @@
     height: 430px;
     width: 400px;
   }
-
 }
