--- a/src/components/Pages/AreasPage/AreasPage.scss
+++ b/src/components/Pages/AreasPage/AreasPage.scss
@@ -4,9 +4,7 @@
 
 .areas-page {
 
-  .width-container {
-    width: 100%;
-  }
+  .width-container { width: 100%; }
 
   .width-container {
     .content-wrapper {
@@ -81,9 +79,7 @@
               }
             }
 
-            .react-select__placeholder {
-              font-size: 14px;
-            }
+            .react-select__placeholder { font-size: 14px; }
 
             .react-select__control--is-focused {
               border-top: 2px solid $blue;
@@ -91,14 +87,10 @@
               box-shadow: none;
             }
 
-            .react-select__indicator-separator {
-              display: none;
-            }
+            .react-select__indicator-separator { display: none; }
 
             .react-select__control {
-              &:hover {
-                cursor: pointer;
-              }
+              &:hover { cursor: pointer; }
             }
           }
 
@@ -120,10 +112,10 @@
                 font-size: $font-size-regular;
                 font-weight: normal;
               }
+
             }
-            .arrow-right {
-              margin-left: 20px;
-            }
+
+            .arrow-right { margin-left: 20px; }
           }
         }
 
@@ -138,9 +130,7 @@
             border: 1px solid $gray;
             margin-top: 100px;
 
-            &:first-child {
-              margin-top: 0;
-            }
+            &:first-child { margin-top: 0; }
           }
         }
       }
@@ -169,9 +159,7 @@
   @media only screen and (max-width: 1265px) {
     .container {
       .width-container {
-        .gray-title {
-          font-size: $font-size-title - 1;
-        }
+        .gray-title { font-size: $font-size-title - 1; }
       }
     }
 
@@ -214,21 +202,14 @@
                   color: $black;
                 }
 
-                .arrow-right {
-                  display: none;
-                }
+                .arrow-right { display: none; }
               }
             }
 
-            .lines {
-              display: none;
-            }
-
+            .lines { display: none; }
           }
 
-          .bottom {
-            display: none;
-          }
+          .bottom { display: none; }
         }
       }
     }
@@ -237,9 +218,7 @@
   @media only screen and (max-width: 880px) {
     .container {
       .width-container {
-        .gray-title {
-          font-size: $font-size-title - 2;
-        }
+        .gray-title { font-size: $font-size-title - 2; }
       }
     }
 
@@ -249,14 +228,10 @@
           .section {
             max-height: 100%;
 
-            .section-about {
-              font-size: $font-size-medium-small;
-            }
+            .section-about { font-size: $font-size-medium-small; }
           }
 
-          .right-title {
-            font-size: $font-size-title - 2.5;
-          }
+          .right-title { font-size: $font-size-title - 2.5; }
         }
       }
     }
@@ -267,14 +242,14 @@
       .content-wrapper {
         .left {
           width: 100%;
+
           .top {
             .area-select {
               display: block;
               width: 100%;
             }
-            .links {
-              display: none;
-            }
+
+            .links { display: none; }
           }
         }
       }
@@ -287,9 +262,7 @@
         .section {
           margin-bottom: 25px;
 
-          .section-about {
-            font-size: $font-size-small;
-          }
+          .section-about { font-size: $font-size-small; }
         }
       }
     }
