--- a/src/components/common/Footer/Footer.scss
+++ b/src/components/common/Footer/Footer.scss
@@ -22,9 +22,7 @@
     @include hover-transition;
     text-transform: uppercase;
 
-    &:hover {
-      color: $black-hover;
-    }
+    &:hover { color: $black-hover; }
 
     &:not(:last-child) {  margin-bottom: 17px; }
   }
@@ -42,9 +40,7 @@
         display: flex;
         flex-direction: column;
 
-        &.right {
-          margin-left: 100px;
-        }
+        &.right { margin-left: 100px; }
       }
     }
 
@@ -69,9 +65,7 @@
       .flex {
         text-align: center;
 
-        &:last-child {
-          margin-top: 100px;
-        }
+        &:last-child { margin-top: 100px; }
       }
     }
   }
@@ -84,7 +78,6 @@
         flex-direction: column;
 
         .flex-column {
-
           &.right {
             margin-left: 0;
             margin-top: 50px;
