--- a/src/common/partials/_colors.scss
+++ b/src/common/partials/_colors.scss
@@ -12,4 +12,5 @@ $black-hover: lighten($black, 50);
 
 
 $dark-gray-hover: lighten($dark-gray, 20);
+$dark-gray-disabled: darken($dark-gray, 10);
 $gray-hover: lighten($gray, 20);
