--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -18,6 +18,7 @@
   .content-wrapper {
     display: flex;
     width: 100%;
+    padding: 0px 15px 0px 15px;
 
     .nav-wrapper {
       .nav-item:nth-child(4) { margin-left: 13px; }
@@ -29,6 +30,10 @@
 
         .nav-item:nth-child(4) { margin-left: -2px; }
       }
+
+      &.en {
+        margin-left: -13px;
+      }
     }
 
 .menu-icon {
@@ -37,7 +42,6 @@
   align-items: center;
   width: 100%;
   justify-content: flex-end;
-  margin-right: 20px;
 
   .navicon {
     background: $black;
@@ -174,9 +178,7 @@
         animation: small-grow ease-in 0.5s;
         animation-fill-mode: forwards;
 
-        &:not(:last-child) {
-          margin-right: 60px;
-        }
+        &:not(:last-child) { margin-right: 60px; }
       }
     }
   }
@@ -185,10 +187,12 @@
 @media only screen and (max-width:1320px) {
   .header {
     .content-wrapper {
-
+      padding: 0 15px 0 5px;
       .lng-switch { margin-left: 10px; }
 
       .nav-wrapper {
+        &.en { margin-left: -22px; }
+
         .nav-item {
           font-size: $font-size-medium-small - 0.2;
           padding: 30px 21px;
