--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -24,7 +24,6 @@
       .nav-item:nth-child(4) { margin-left: 13px; }
 
       &.rs {
-        .nav-item:nth-child(2) { margin-left: 3px; }
 
         .nav-item:nth-child(3) { margin-left: -5px; }
 
@@ -102,7 +101,7 @@
       padding: 30px 25px;
       font-weight: bold;
       z-index: 25;
-      margin-left: -4px;
+      margin-left: -7px;
 
       @include hover-transition;
 
@@ -193,6 +192,10 @@
       .nav-wrapper {
         &.en { margin-left: -22px; }
 
+        &.rs {
+          margin-left: -7px;
+        }
+
         .nav-item {
           font-size: $font-size-medium-small - 0.2;
           padding: 30px 21px;
@@ -228,7 +231,11 @@
         max-width: 75px;
         max-height: 75px;
       }
-      .nav-item { padding: 30px 20px; }
+      .nav-item {
+        padding: 30px 20px;
+
+        &:nth-child(2) { margin-left: 0px; }
+      }
     }
   }
 }
@@ -277,7 +284,7 @@
 
         &:nth-child(2) { margin-left: -18px; }
 
-        &:nth-child(4) { margin-left: -9px !important; }
+        &:nth-child(4) { margin-left: -17px !important; }
       }
 
       .lng-switch { font-size: $font-size-large; }
@@ -291,9 +298,6 @@
       .nav-wrapper {
         &.rs {
           .nav-item {
-
-            &:first-child { margin-left: -15px; }
-
             &:nth-child(2) { margin-left: -15px; }
           }
         }
@@ -332,13 +336,12 @@
       .nav-wrapper {
         &.rs {
           .nav-item {
-            &:first-child { margin-left: -10px; }
 
-            &:nth-child(2) { margin-left: -27px; }
+            &:nth-child(2) { margin-left: -26px; }
 
-            &:nth-child(3) { margin-left: -20px; }
+            &:nth-child(3) { margin-left: -15px; }
 
-            &:nth-child(4) { margin-left: -20px !important; }
+            &:nth-child(4) { margin-left: -26px !important; }
           }
 
           .lng-switch { margin-left: -5px; }
@@ -372,6 +375,7 @@
           &.rs {
             .nav-item {
               font-size: 12px;
+              margin-left: -1px;
 
               &:nth-child(2){ margin-left: -30px; }
 
