--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -31,6 +31,8 @@
       }
 
       &.en {
+        .nav-item:nth-child(3) { margin-left: 6px; }
+
         margin-left: -13px;
       }
     }
@@ -261,7 +263,8 @@
 
         &.rs {
           .nav-item {
-            &:nth-child(2) { margin: -8px; }
+            &:nth-child(2) { margin: -10px; }
+            &:nth-child(4) { margin-left: -12px; }
           }
         }
       }
@@ -278,13 +281,10 @@
         }
       }
 
-
       .nav-item {
         padding: 30px 15px;
 
         &:nth-child(2) { margin-left: -18px; }
-
-        &:nth-child(4) { margin-left: -17px !important; }
       }
 
       .lng-switch { font-size: $font-size-large; }
@@ -341,7 +341,7 @@
 
             &:nth-child(3) { margin-left: -15px; }
 
-            &:nth-child(4) { margin-left: -26px !important; }
+            &:nth-child(4) { margin-left: -20px !important; }
           }
 
           .lng-switch { margin-left: -5px; }
@@ -357,7 +357,7 @@
 
             &:nth-child(3) { margin-left: -20px; }
 
-            &:nth-child(4) { margin-left: -10px !important; }
+            &:nth-child(4) { margin-left: -18px !important; }
           }
 
           .lng-switch { margin-left: -5px; }
