--- a/src/components/Pages/LawyerPage/LawyerPage.scss
+++ b/src/components/Pages/LawyerPage/LawyerPage.scss
@@ -42,14 +42,10 @@
       box-shadow: none;
     }
 
-    .react-select__indicator-separator {
-      display: none;
-    }
+    .react-select__indicator-separator { display: none; }
 
     .react-select__control {
-      &:hover {
-        cursor: pointer;
-      }
+      &:hover { cursor: pointer; }
     }
   }
 
@@ -68,9 +64,7 @@
       border-top: 2px solid $gray;
       margin-top: 50px;
 
-      &.around {
-        justify-content: space-around;
-      }
+      &.around { justify-content: space-around; }
 
       .single-lawyer {
         display: flex;
@@ -92,12 +86,7 @@
         .middle {
             margin: 0 50px;
 
-          .lawyer-img {
-          }
-
-          .name {
-            margin: 27px 0 15px 0;
-          }
+          .name { margin: 27px 0 15px 0; }
 
           .area {
             margin-top: 15px;
@@ -111,23 +100,17 @@
   @media only screen and (max-width: 948px) {
     .container {
       .width-container {
-        .gray-title {
-          font-size: $font-size-title - 1;
-        }
+
+        .gray-title { font-size: $font-size-title - 1; }
       }
     }
 
     .react-select__control {
-      .react-select__placeholder {
-        font-size: $font-size-small-regular;
-      }
+      .react-select__placeholder { font-size: $font-size-small-regular; }
     }
 
     .width-container {
-
-      .area-title {
-        font-size: $font-size-title - 2.5;
-      }
+      .area-title { font-size: $font-size-title - 2.5; }
 
       .lawyers-container {
         justify-content: center;
@@ -198,15 +181,11 @@
     .react-select__control {
       font-size: $font-size-large;
 
-      .react-select__placeholder {
-        font-size: $font-size-small-regular - 0.4;
-      }
+      .react-select__placeholder { font-size: $font-size-small-regular - 0.4; }
     }
 
     .width-container {
-      .area-title {
-        font-size: $font-size-title - 3.5;
-      }
+      .area-title { font-size: $font-size-title - 3.5; }
     }
   }
 }
