--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -19,14 +19,25 @@
   .content-wrapper {
     display: flex;
     padding: 30px 21px;
+    width: 100%;
 
     .nav-wrapper {
 
       &.rs {
+        .nav-item:first-child {
+           margin-right: 48px;
+           margin-left: 53px;
+          }
+        .nav-item:nth-child(2) { margin-right: 45px; }
+        .nav-item:nth-child(3) { margin-right: 53px; }
+        .nav-item:nth-child(4) { margin-right: 40px; }
       }
 
       &.en {
-        .nav-item:first-child { margin-right: 40px; }
+        .nav-item:first-child {
+          margin-right: 53px;
+          margin-left: 25px;
+        }
         .nav-item:nth-child(2) { margin-right: 56px; }
         .nav-item:nth-child(3) { margin-right: 59px; }
         .nav-item:nth-child(4) { margin-right: 45px; }
@@ -125,7 +136,6 @@
     .headerLogo {
       max-width: 95px;
       max-height: 95px;
-      margin-right: 49px;
       z-index: 25;
     }
 
@@ -180,20 +190,30 @@
 @media only screen and (max-width:1320px) {
   .header {
     .content-wrapper {
-      .headerLogo { margin-right: 27px; }
+
+      .lng-switch { margin-top: -5px; }
 
       .nav-wrapper {
         .nav-item { font-size: $font-size-medium-small - 0.2; }
 
         &.en {
-          .nav-item:first-child { margin-right: 30px; }
+          .nav-item:first-child {
+            margin-right: 30px;
+            margin-left: 22px;
+          }
           .nav-item:nth-child(2) { margin-right: 45px; }
           .nav-item:nth-child(3) { margin-right: 46px; }
           .nav-item:nth-child(4) { margin-right: 32px; }
         }
 
         &.rs {
-
+          .nav-item:first-child {
+            margin-right: 38px;
+            margin-left: 32px;
+          }
+          .nav-item:nth-child(2) { margin-right: 37px; }
+          .nav-item:nth-child(3) { margin-right: 40px; }
+          .nav-item:nth-child(4) { margin-right: 28px; }
         }
       }
     }
@@ -222,15 +242,14 @@
       .headerLogo {
         max-width: 75px;
         max-height: 75px;
-        margin-right: 21px;
       }
+
       .lng-switch { margin-top: -4px; }
 
-      &.en {
-      }
-
-      &.rs {
-
+      .nav-wrapper {
+        &.rs {
+          .nav-item:first-child { margin-left: 26px; }
+        }
       }
     }
   }
@@ -255,17 +274,26 @@
     .content-wrapper {
       .headerLogo {
         margin-left: -6px;
-        margin-right: 17px;
       }
 
       .nav-wrapper {
         &.en {
-          .nav-item:first-child { margin-right: 21px; }
+          .nav-item:first-child {
+             margin-right: 21px;
+             margin-left: 17px;
+           }
           .nav-item:nth-child(2) { margin-right: 35px; }
           .nav-item:nth-child(3) { margin-right: 37px; }
         }
 
-        &.rs {}
+        &.rs {
+          .nav-item:first-child {
+            margin-left: 24px;
+            margin-right: 27px;
+          }
+          .nav-item:nth-child(2) { margin-right: 27px; }
+          .nav-item:nth-child(3) { margin-right: 29px; }
+        }
       }
 
       .nav-wrapper-gray {
@@ -289,7 +317,11 @@
           .nav-item:nth-child(3) { margin-right: 36px; }
           .nav-item:nth-child(4) { margin-right: 28px; }
         }
-        &.rs {}
+
+        &.rs {
+          .nav-item:first-child { margin-right: 23px; }
+          .nav-item:nth-child(2) { margin-right: 25px; }
+        }
       }
     }
   }
@@ -302,17 +334,29 @@
         max-width: 62px;
         max-height: 62px;
         margin-left: -15px;
-        margin-right: 10px;
       }
 
       .lng-switch { margin-top: -2px; }
 
       .nav-wrapper {
         &.en {
-          .nav-item:first-child { margin-right: 13px; }
+          .nav-item:first-child {
+            margin-right: 13px;
+            margin-left: 10px;
+          }
           .nav-item:nth-child(2) { margin-right: 24px; }
           .nav-item:nth-child(3) { margin-right: 28px; }
           .nav-item:nth-child(4) { margin-right: 19px; }
+        }
+
+        &.rs {
+          .nav-item:first-child {
+            margin-left: 18px;
+            margin-right: 16px;
+          }
+          .nav-item:nth-child(2) { margin-right: 18px; }
+          .nav-item:nth-child(3) { margin-right: 19px; }
+          .nav-item:nth-child(4) { margin-right: 20px; }
         }
       }
     }
@@ -329,6 +373,10 @@
           &.en {
             .nav-item:nth-child(3) { margin-right: 23px; }
             .nav-item:nth-child(4) { margin-right: 15px; }
+          }
+
+          &.rs {
+            .nav-item:first-child { margin-left: 15px; }
           }
         }
       }
@@ -438,7 +486,7 @@
 
           .lng-switch {
             margin-left: 0 !important;
-            margin-top: 50px;
+            margin-top: 150px;
           }
         }
       }
