--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -11,6 +11,12 @@
     justify-content: space-between;
     margin-bottom: 300px;
 
+    .arrow {
+      margin-left: 250px;
+      margin-top: 50px;
+      padding: 20px;
+    }
+
     .left {
       border-left: 2px solid $gray;
       max-height: 595px;
@@ -218,6 +224,8 @@
             justify-content: space-between;
             flex-direction: column;
             margin-right: 71px;
+
+            img { pointer-events: none; }
           }
 
           .single-lawyer-reverse {
@@ -228,6 +236,7 @@
 
             img {
               margin-bottom: 25px;
+              pointer-events: none;
             }
           }
         }
@@ -905,6 +914,66 @@
   }
 }
 
+@media only screen and (max-width: 1095px) {
+  .homepage {
+    .about-us {
+      .width-container {
+        .about-us-flex {
+          justify-content: center;
+          text-align: justify;
+          font-size: 16px;
+          flex-wrap: wrap;
+
+          .text {
+            max-width: 262px;
+
+            &:nth-child(2) { margin-left: 60px; }
+          }
+          .line-text {
+            width: 100%;
+            height: 400px;
+            justify-content: space-between;
+            margin-top: 30px;
+
+            .med-hor-line {
+              max-width: 100%;
+              width: 100%;
+            }
+
+            .mid {
+              flex-direction: column;
+              align-items: center;
+
+              .mid-left {
+                align-items: center;
+                max-width: 100%;
+
+                .text {
+                  max-width: 582px;
+                  margin-bottom: 30px;
+                }
+              }
+
+              .mid-right {
+                width: 100%;
+                max-width: 100%;
+                margin-left: 0;
+
+                .button-wrapper {
+                  margin: 50px 0px 50px 0px;
+                  justify-content: center;
+
+                  .small-hor-line { display: none; }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 1050px) {
   .homepage {
     .header-area {
@@ -917,22 +986,6 @@
         .header-image {
           max-width: 390px;
           max-height: 480px;
-        }
-      }
-    }
-    .about-us {
-      .about-us-flex {
-        font-size: 16px;
-        flex-wrap: wrap;
-
-        .line-text {
-          .mid {
-            .mid-left {
-              .text { font-size: $font-size-small-regular - 0.3; }
-
-            }
-            .mid-right { max-height: 190px; }
-          }
         }
       }
     }
@@ -1010,62 +1063,13 @@
         }
       }
 
+      .arrow {
+        margin-left: 360px;
+      }
+
       .content-wrapper {
         &.rs {
           .nav-item:nth-child(3) { margin-left: 0 !important; }
-        }
-      }
-    }
-
-    .about-us {
-      .width-container {
-        .about-us-flex {
-          justify-content: center;
-          text-align: justify;
-
-          .text {
-            max-width: 262px;
-
-            &:nth-child(2) { margin-left: 60px; }
-          }
-          .line-text {
-            width: 100%;
-            height: 400px;
-            justify-content: space-between;
-            margin-top: 30px;
-
-            .med-hor-line {
-              max-width: 100%;
-              width: 100%;
-            }
-
-            .mid {
-              flex-direction: column;
-              align-items: center;
-
-              .mid-left {
-                align-items: center;
-                max-width: 100%;
-
-                .text {
-                  max-width: 582px;
-                  margin: 20 auto;
-                }
-              }
-
-              .mid-right {
-                width: 100%;
-                max-width: 100%;
-
-                .button-wrapper {
-                  margin: 30px 0px 30px 0px;
-                  justify-content: center;
-
-                  .small-hor-line { display: none; }
-                }
-              }
-            }
-          }
         }
       }
     }
